# auth_flask_restx

./: .env  pyproject.toml  requirements.txt
app/: __init__.py
app/blueprints/api/: __init__.py  routes.py
app/blueprints/api/controller/: user.py
app/blueprints/api/namespace/: auth.py
app/blueprints/api/serialize/: user.py
app/blueprints/utils/decorators/: login_required.py
app/models/: __init__.py  users.py
migrations/: env.py
migrations/versions/: 018600229cbc_.py  d42989d76ea3_.py  e2b7ccec1b19_.py
